src/objects/Bank__c.object
<CustomObject>
    <fields>
        <fullName>AccountNo__c</fullName>
        <label>AccountNo.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Code__c</fullName>
        <label>Bank Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Branch_Name__c</fullName>
        <label>Branch Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAAC_NO__c</fullName>
        <label>FAAC NO.</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Config</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>Banks</relationshipLabel>
        <relationshipName>Banks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bank</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>